--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,8 +4,6 @@ body {
 }
 
 .container {
-	width: 400px;
-	height: 800px;
 	margin: 0 auto;
 	background-color: #fff;
 	box-shadow: 0 0 10px rgba(0,0,0,0.3);
@@ -15,6 +13,8 @@ body {
 	justify-content: center;
 	align-items: center;
 	margin-top: 10px;
+	margin-bottom: 10px;
+	height: 95vh;
 
 }
 
@@ -112,7 +112,7 @@ button {
 	background-color: #6B39B4;
 	color: #fff;
 	border: none;
-	margin: 0 10px;
+	margin: 5px;
 	font-size: 20px;
 	cursor: pointer;
 	transition: background-color 0.3s ease;
@@ -343,3 +343,123 @@ button {
 		a.fa {
 			font-size: 28px;
 		  }
+
+/* Smartphones em modo paisagem */
+@media only screen 
+and (min-width: 320px) 
+and (max-width: 480px) 
+and (orientation: landscape) {
+  .container {
+	  width: 100%;
+	  max-width: 480px;
+	  margin: 0 auto;
+	  overflow-y: auto;
+
+  }
+  .profile-buttons {
+    position: static;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .profile-buttons button {
+    margin: 5px;
+  }
+}
+
+/* Smartphones em modo retrato */
+@media only screen 
+and (min-width: 320px) 
+and (max-width: 480px) 
+and (orientation: portrait) {
+  .container {
+	  width: 100%;
+	  max-width: 320px;
+	  margin: 0 auto;
+	  overflow-y: auto;
+
+  }
+  .profile-buttons {
+    position: static;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .profile-buttons button {
+    margin: 5px;
+  }
+}
+
+/* Smartphones em modo retrato com largura e altura de 640x480 */
+@media only screen 
+and (max-width: 640px) 
+and (max-height: 480px) 
+and (orientation: portrait) {
+  .container {
+    width: 100%;
+    max-width: 320px;
+    margin: 0 auto;
+    overflow-y: auto;
+  }
+  .profile-buttons {
+    position: static;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .profile-buttons button {
+    margin: 5px;
+  }
+}
+
+/* Tablets */
+@media only screen 
+and (min-width: 768px) 
+and (max-width: 1024px) {
+  .container {
+	  width: 100%;
+	  height: 100%;
+	  max-width: 768px;
+	  margin: 0 auto;
+	  overflow-y: auto;
+  }.profile-buttons {
+    position: static;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .profile-buttons button {
+    margin: 5px;
+  }
+  
+}
+
+/* Monitores de laptop */
+@media only screen 
+and (min-width: 1025px) 
+and (max-width: 1366px) {
+  .container {
+	  width: 100%;
+	  max-width: 1024px;
+	  margin: 0 auto;
+	  overflow-y: auto;
+
+  }
+
+}
+
+/* Monitores desktop */
+@media only screen 
+and (min-width: 1367px) {
+  .container {
+	  width: 100%;
+	  max-width: 1280px;
+	  margin: 0 auto;
+  }
+  
+}
